# CppVault

./: CMakeLists.txt  README.md  explanation.md  imgui.ini  prerequistics.txt
src/: Crypto.cpp  Crypto.h  Vault.cpp  Vault.h  main.cpp
